# qScan

./: .clang-format  .gitignore  README.md  format.sh  meson.build  qScan.desktop.in
gui/: main.cpp  meson.build
gui/config/: QScanConfig.cpp  QScanConfig.hpp
gui/ui/: DeviceElement.ui  DeviceSelection.ui  ImageViewer.ui  ImagesTab.ui  MainWindow.ui  OptionsWidget.ui  ScanRoot.ui  fixup.py
gui/util/: ImageEditor.cpp  ImageEditor.hpp  QImageContainer.cpp  QImageContainer.hpp
gui/viewer/: ScanImageView.cpp  ScanImageView.hpp  SelectionOverlay.cpp  SelectionOverlay.hpp
gui/widgets/: DeviceElement.cpp  DeviceElement.hpp  DeviceSelection.cpp  DeviceSelection.hpp  ImageViewer.cpp  ImageViewer.hpp  ImagesTab.cpp  ImagesTab.hpp  MainWindow.cpp  MainWindow.hpp  OptionsWidget.cpp  OptionsWidget.hpp  ScanRoot.cpp  ScanRoot.hpp
img/: qScan.xcf
lib/: SaneBackend.cpp  SaneBackend.hpp  SaneDevice.cpp  SaneDevice.hpp  SaneException.cpp  SaneException.hpp  SaneImage.cpp  SaneImage.hpp  SaneOption.cpp  SaneOption.hpp  SaneOptionsWrapper.cpp  SaneOptionsWrapper.hpp  ScanBackend.cpp  ScanBackend.hpp  constStringHash.hpp  enumGen.json  meson.build  qscan_config.hpp.in  qscan_log.cpp  qscan_log.hpp
lib/util/: ValueResetter.hpp  constStringHash.hpp
subprojects/: .gitignore  enumGen.wrap  spdlog.wrap
test/: main.cpp  meson.build
